# all_my_code

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  HOWTOCONTRIBUTE.rst  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py
all_my_code/: __init__.py  date_utils.py  plotting.py  utils.py  xarray_data_prep.py
all_my_code/analyse/: __init__.py  carbon.py  pco2_seasonal_cycle.py  seasonal_cycle.py  time_of_emergence.py
all_my_code/analyse/extreme/: __init__.py  aggregate.py  detect.py  detecting.py  stats.py
all_my_code/carbsys/: __init__.py  alkalinity.py  decomp.py  lir_v3.py  pco2_seasonal_cycle.py
all_my_code/data/: __init__.py  climate_indicies.py  regions.py
all_my_code/datasets/: __init__.py  carbon.py  climate_indicies.py  masks.py  other.py  regions.py
all_my_code/extremes/: __init__.py  aggregate.py  detect.py  stats.py
all_my_code/files/: __init__.py  citations.py  download.py  file_utils.py  save.py  shapefiles.py  utils.py
all_my_code/munging/: __init__.py  collocation.py  colocation.py  conform.py  date_utils.py  grid.py  name_matching.py  sparse.py  units.py
all_my_code/stats/: __init__.py  distributions.py  forecast.py  outliers.py  seas_cycle.py  smoothen.py  spatial.py  time_series.py
all_my_code/viz/: __init__.py  _xr_accessors.py  cmaps.py  geographic.py  hovmoller.py  line_plots.py  maps.py  utils.py  visualize.py
ci/: environment-dev-3.7.yml  run-linter.sh
docs/: conf.py  index.rst  installation.md
ocean_data_tools/: __init__.py  _xarray_stats.py  file_utils.py  gridding.py  gridding_matching.py  plotting.py  sparse.py  xarray_data_prep.py
ocean_data_tools/analyse/: time_of_emergence.py
ocean_data_tools/munging/: gridding_matching.py  xarray_data_prep.py
ocean_data_tools/stats/: __init__.py  trends.py
ocean_data_tools/viz/: __init__.py  cmaps.py  maps.py
tests/: core.py  test_core.py  test_data.py  test_munging.py  test_regridding.py  test_seas_cycle.py  test_utils.py
