[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    data
    data/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[metadata]
name = all_my_code
description = A repo of all my code - thought good to share
author = Luke Gregor
url = https://github.com/lukegre/all_my_code
long_description = file: README.rst
long_description_content_type = text/rst
license = MIT
license_file = LICENSE

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    # Don't change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = lukegre@gmail.com


### make sure to fill in your dependencies!
[options]
install_requires =
    astropy
    matplotlib
    tqdm
    numpy
    xarray
    pandas
    joblib
    PyYAML
    crossrefapi
    pooch
    regionmask
    fuzzywuzzy
    fsspec
    python-Levenshtein
    munch
setup_requires =
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:


[flake8]
# https://flake8.pycqa.org/
max-line-length = 90
ignore = E122,E123,E126,E127,E128,E731,E722,C901,W605,W503
exclude = build,tests,.git,benchmarks,.asv

[tool:black]
# https://black.readthedocs.io/
skip-string-normalization = True  # otherwise clash with precommit
line-length = 79
target-version = ['py37']
include = '\.pyi?$'

[tool:isort]
# https://github.com/timothycrosley/isort
multi_line_output = 3
include_trailing_comma = True
line_length = 79

[doc8]
# https://pypi.org/project/doc8/
ignore-path = docs/_build
max-line-length = 100
sphinx = True

[bdist_wheel]
universal=1

[tool:pytest]
testpaths=tests/
